--- a/package.json
+++ b/package.json
@@ -5,19 +5,23 @@
   "main": "app.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app.js"
+    "dev": "cross-env NODE_ENV=development nodemon app.js",
+    "build": "webpack"
   },
   "author": "PeBe",
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.5.3",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
-    "materialize-css": "^1.0.0-rc.2",
+    "handlebars": "^4.7.6",
+    "jquery": "^3.5.1",
     "mdbootstrap": "^4.19.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.0",
@@ -26,10 +30,13 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "popper.js": "^1.16.1"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "nodemon": "^2.0.4"
+    "handlebars-webpack-plugin": "^2.1.1",
+    "nodemon": "^2.0.4",
+    "webpack": "^5.1.3"
   }
 }
