--- a/package.json
+++ b/package.json
@@ -34,9 +34,15 @@
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
-    "handlebars-webpack-plugin": "^2.1.1",
+    "css-loader": "^5.0.0",
+    "handlebars-loader": "^1.7.1",
+    "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
+    "sass-loader": "^10.0.3",
+    "source-map-loader": "^1.1.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.1.3"
   }
 }
