--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "with-query": "^1.3.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
