--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
     "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "build": "webpack"
+    "build": "webpack",
+    "doc": "jsdoc -c jsdoc.json"
   },
   "author": "PeBe",
   "license": "MIT",
@@ -39,6 +40,7 @@
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
     "handlebars-loader": "^1.7.1",
+    "jsdoc": "^3.6.6",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "sass-loader": "^10.0.3",
