--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node app",
     "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "build": "webpack",
-    "doc": "jsdoc -c jsdoc.json"
+    "build": "webpack"
   },
   "author": "PeBe",
   "license": "MIT",
