--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Elektroniczny dziennik diabetyka",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
-    "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "build": "webpack"
+    "prod": "cross-env NODE_ENV=production node server",
+    "dev": "cross-env NODE_ENV=development nodemon server",
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack --config webpack.dev.js --watch",
+    "run:dev": "concurrently 'webpack --config webpack.dev.js --watch' 'npm run dev'"
   },
   "author": "PeBe",
   "license": "MIT",
@@ -15,6 +17,7 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
@@ -38,13 +41,19 @@
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
+    "file-loader": "^6.2.0",
     "handlebars-loader": "^1.7.1",
-    "jsdoc": "^3.6.6",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.2.1",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.6",
     "sass-loader": "^10.0.3",
     "source-map-loader": "^1.1.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.1.3"
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.2.0"
   }
 }
