--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "cross-env NODE_ENV=development nodemon server",
     "build": "webpack --config webpack.prod.js",
     "start": "webpack --config webpack.dev.js --watch",
+    "serve": "webpack serve --config webpack.dev.js",
     "run:dev": "concurrently 'webpack --config webpack.dev.js --watch' 'npm run dev'"
   },
   "author": "PeBe",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.2.1",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.0",
     "file-loader": "^6.2.0",
