--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "Frontend",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js"
+    "start": "webpack serve --config webpack.dev.js --host 0.0.0.0"
   },
   "author": "GSD",
   "license": "MIT",
