--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -17,6 +17,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-json-view": "^1.19.1",
+    "react-media": "^1.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
