--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "bootstrap": "^4.5.3",
+    "classnames": "^2.2.6",
     "mdbreact": "^4.27.0",
     "mobx": "^6.0.3",
     "mobx-react": "^7.0.2",
