--- a/backend/config/config.sample.env
+++ b/backend/config/config.sample.env
@@ -1,9 +1,13 @@
 PORT = 3000
-MONGO_URI = 
+MONGO_URI =
 
-GOOGLE_CLIENT_ID = 
-GOOGLE_CLIENT_SECRET = 
+UPLOAD_TEMP_PATH = ./.tmp/
+UPLOAD_MAX_SIZE = 1000000
+UPLOAD_PATH = ./.uploaded/
 
-FACEBOOK_APP_ID = 
+GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_SECRET =
+
+FACEBOOK_APP_ID =
 FACEBOOK_CLIENT_ID =
-FACEBOOK_SECRET = 
+FACEBOOK_SECRET =
