Serving a static `/uploaded` directory

--- a/backend/config/config.sample.env
+++ b/backend/config/config.sample.env
@@ -4,6 +4,7 @@ MONGO_URI =
 UPLOAD_TEMP_PATH = ./.tmp/
 UPLOAD_MAX_SIZE = 1000000
 UPLOAD_PATH = ./.uploaded/
+UPLOAD_SERVE_PATH = /uploaded
 
 GOOGLE_CLIENT_ID =
 GOOGLE_CLIENT_SECRET =
